style.css
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");

* {
	box-sizing: border-box;
	padding: 0;
	margin: auto;
}

.container {
	height: 96vh;
	max-width: 1000px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.sedans {
	background: hsl(31, 77%, 52%);
	padding: 20px;
}

.suv {
	background: hsl(184, 100%, 22%);
	padding: 20px;
}

.luxury {
	background: hsl(179, 100%, 13%);
	padding: 20px;
}

p {
	color: hsla(0, 0%, 100%, 0.75);
	font-family: "Lexend Deca", sans-serif;
	margin-bottom: 60px;
	font-size: 15px;
    line-height: 1.5;
}

h1 {
	color: hsl(0, 0%, 95%);
	font-family: "Big Shoulders Display", cursive;
	text-transform: uppercase;
	margin-bottom: 40px;
}

button {
	padding: 10px;
	border-radius: 20px;
    margin-bottom: 10px;
	border: none;
	font-family: "Lexend Deca", sans-serif;
    font-size: 15px;
}

.sedans > button:active {
	background: hsl(31, 77%, 52%);
	color: hsl(0, 0%, 95%);
	border: 3px solid hsl(0, 0%, 95%);
}

.suv > button:active {
	background: hsl(184, 100%, 22%);
	color: hsl(0, 0%, 95%);
	border: 3px solid hsl(0, 0%, 95%);
}

.luxury > button:active {
	background: hsl(179, 100%, 13%);
	color: hsl(0, 0%, 95%);
	border: 3px solid hsl(0, 0%, 95%);
}

.sedans > button {
	color: hsl(31, 77%, 52%);
}
.suv > button {
	color: hsl(184, 100%, 22%);
}
.luxury > button {
	color: hsl(179, 100%, 13%);
}
img {
	padding: 30px 0;
}

@media screen and (max-width: 900px) {
	.container {
		display: grid;
		grid-template-columns: 370px;
		grid-template-rows: repeat(3, 1fr);
	}
}

